[package]
name = "abc257"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc257-a = { alias = "a", problem = "https://atcoder.jp/contests/abc257/tasks/abc257_a" }
abc257-b = { alias = "b", problem = "https://atcoder.jp/contests/abc257/tasks/abc257_b" }
abc257-c = { alias = "c", problem = "https://atcoder.jp/contests/abc257/tasks/abc257_c" }
abc257-d = { alias = "d", problem = "https://atcoder.jp/contests/abc257/tasks/abc257_d" }
abc257-e = { alias = "e", problem = "https://atcoder.jp/contests/abc257/tasks/abc257_e" }
abc257-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc257/tasks/abc257_h" }
abc257-f = { alias = "f", problem = "https://atcoder.jp/contests/abc257/tasks/abc257_f" }
abc257-g = { alias = "g", problem = "https://atcoder.jp/contests/abc257/tasks/abc257_g" }

[[bin]]
name = "abc257-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc257-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc257-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc257-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc257-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc257-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc257-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc257-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
