[package]
name = "abc258"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc258-a = { alias = "a", problem = "https://atcoder.jp/contests/abc258/tasks/abc258_a" }
abc258-b = { alias = "b", problem = "https://atcoder.jp/contests/abc258/tasks/abc258_b" }
abc258-c = { alias = "c", problem = "https://atcoder.jp/contests/abc258/tasks/abc258_c" }
abc258-d = { alias = "d", problem = "https://atcoder.jp/contests/abc258/tasks/abc258_d" }
abc258-e = { alias = "e", problem = "https://atcoder.jp/contests/abc258/tasks/abc258_e" }
abc258-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc258/tasks/abc258_h" }
abc258-f = { alias = "f", problem = "https://atcoder.jp/contests/abc258/tasks/abc258_f" }
abc258-g = { alias = "g", problem = "https://atcoder.jp/contests/abc258/tasks/abc258_g" }

[[bin]]
name = "abc258-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc258-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc258-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc258-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc258-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc258-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc258-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc258-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
