[package]
name = "abc260"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc260-a = { alias = "a", problem = "https://atcoder.jp/contests/abc260/tasks/abc260_a" }
abc260-b = { alias = "b", problem = "https://atcoder.jp/contests/abc260/tasks/abc260_b" }
abc260-c = { alias = "c", problem = "https://atcoder.jp/contests/abc260/tasks/abc260_c" }
abc260-d = { alias = "d", problem = "https://atcoder.jp/contests/abc260/tasks/abc260_d" }
abc260-e = { alias = "e", problem = "https://atcoder.jp/contests/abc260/tasks/abc260_e" }
abc260-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc260/tasks/abc260_h" }
abc260-f = { alias = "f", problem = "https://atcoder.jp/contests/abc260/tasks/abc260_f" }
abc260-g = { alias = "g", problem = "https://atcoder.jp/contests/abc260/tasks/abc260_g" }

[[bin]]
name = "abc260-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc260-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc260-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc260-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc260-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc260-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc260-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc260-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
