[package]
name = "abc261"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc261-a = { alias = "a", problem = "https://atcoder.jp/contests/abc261/tasks/abc261_a" }
abc261-b = { alias = "b", problem = "https://atcoder.jp/contests/abc261/tasks/abc261_b" }
abc261-c = { alias = "c", problem = "https://atcoder.jp/contests/abc261/tasks/abc261_c" }
abc261-d = { alias = "d", problem = "https://atcoder.jp/contests/abc261/tasks/abc261_d" }
abc261-e = { alias = "e", problem = "https://atcoder.jp/contests/abc261/tasks/abc261_e" }
abc261-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc261/tasks/abc261_h" }
abc261-f = { alias = "f", problem = "https://atcoder.jp/contests/abc261/tasks/abc261_f" }
abc261-g = { alias = "g", problem = "https://atcoder.jp/contests/abc261/tasks/abc261_g" }

[[bin]]
name = "abc261-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc261-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc261-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc261-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc261-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc261-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc261-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc261-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
