[package]
name = "abc262"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc262-a = { alias = "a", problem = "https://atcoder.jp/contests/abc262/tasks/abc262_a" }
abc262-b = { alias = "b", problem = "https://atcoder.jp/contests/abc262/tasks/abc262_b" }
abc262-c = { alias = "c", problem = "https://atcoder.jp/contests/abc262/tasks/abc262_c" }
abc262-d = { alias = "d", problem = "https://atcoder.jp/contests/abc262/tasks/abc262_d" }
abc262-e = { alias = "e", problem = "https://atcoder.jp/contests/abc262/tasks/abc262_e" }
abc262-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc262/tasks/abc262_h" }
abc262-f = { alias = "f", problem = "https://atcoder.jp/contests/abc262/tasks/abc262_f" }
abc262-g = { alias = "g", problem = "https://atcoder.jp/contests/abc262/tasks/abc262_g" }

[[bin]]
name = "abc262-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc262-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc262-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc262-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc262-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc262-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc262-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc262-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
