[package]
name = "abc264"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc264-a = { alias = "a", problem = "https://atcoder.jp/contests/abc264/tasks/abc264_a" }
abc264-b = { alias = "b", problem = "https://atcoder.jp/contests/abc264/tasks/abc264_b" }
abc264-c = { alias = "c", problem = "https://atcoder.jp/contests/abc264/tasks/abc264_c" }
abc264-d = { alias = "d", problem = "https://atcoder.jp/contests/abc264/tasks/abc264_d" }
abc264-e = { alias = "e", problem = "https://atcoder.jp/contests/abc264/tasks/abc264_e" }
abc264-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc264/tasks/abc264_h" }
abc264-f = { alias = "f", problem = "https://atcoder.jp/contests/abc264/tasks/abc264_f" }
abc264-g = { alias = "g", problem = "https://atcoder.jp/contests/abc264/tasks/abc264_g" }

[[bin]]
name = "abc264-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc264-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc264-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc264-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc264-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc264-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc264-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc264-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
