[package]
name = "abc266"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc266-a = { alias = "a", problem = "https://atcoder.jp/contests/abc266/tasks/abc266_a" }
abc266-b = { alias = "b", problem = "https://atcoder.jp/contests/abc266/tasks/abc266_b" }
abc266-c = { alias = "c", problem = "https://atcoder.jp/contests/abc266/tasks/abc266_c" }
abc266-d = { alias = "d", problem = "https://atcoder.jp/contests/abc266/tasks/abc266_d" }
abc266-e = { alias = "e", problem = "https://atcoder.jp/contests/abc266/tasks/abc266_e" }
abc266-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc266/tasks/abc266_h" }
abc266-f = { alias = "f", problem = "https://atcoder.jp/contests/abc266/tasks/abc266_f" }
abc266-g = { alias = "g", problem = "https://atcoder.jp/contests/abc266/tasks/abc266_g" }

[[bin]]
name = "abc266-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc266-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc266-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc266-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc266-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc266-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc266-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc266-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
