[package]
name = "abc270"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc270-a = { alias = "a", problem = "https://atcoder.jp/contests/abc270/tasks/abc270_a" }
abc270-b = { alias = "b", problem = "https://atcoder.jp/contests/abc270/tasks/abc270_b" }
abc270-c = { alias = "c", problem = "https://atcoder.jp/contests/abc270/tasks/abc270_c" }
abc270-d = { alias = "d", problem = "https://atcoder.jp/contests/abc270/tasks/abc270_d" }
abc270-e = { alias = "e", problem = "https://atcoder.jp/contests/abc270/tasks/abc270_e" }
abc270-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc270/tasks/abc270_h" }
abc270-f = { alias = "f", problem = "https://atcoder.jp/contests/abc270/tasks/abc270_f" }
abc270-g = { alias = "g", problem = "https://atcoder.jp/contests/abc270/tasks/abc270_g" }

[[bin]]
name = "abc270-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc270-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc270-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc270-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc270-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc270-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc270-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc270-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
