[package]
name = "abc271"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc271-a = { alias = "a", problem = "https://atcoder.jp/contests/abc271/tasks/abc271_a" }
abc271-b = { alias = "b", problem = "https://atcoder.jp/contests/abc271/tasks/abc271_b" }
abc271-c = { alias = "c", problem = "https://atcoder.jp/contests/abc271/tasks/abc271_c" }
abc271-d = { alias = "d", problem = "https://atcoder.jp/contests/abc271/tasks/abc271_d" }
abc271-e = { alias = "e", problem = "https://atcoder.jp/contests/abc271/tasks/abc271_e" }
abc271-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc271/tasks/abc271_h" }
abc271-f = { alias = "f", problem = "https://atcoder.jp/contests/abc271/tasks/abc271_f" }
abc271-g = { alias = "g", problem = "https://atcoder.jp/contests/abc271/tasks/abc271_g" }

[[bin]]
name = "abc271-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc271-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc271-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc271-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc271-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc271-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc271-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc271-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
