[package]
name = "abc274"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc274-a = { alias = "a", problem = "https://atcoder.jp/contests/abc274/tasks/abc274_a" }
abc274-b = { alias = "b", problem = "https://atcoder.jp/contests/abc274/tasks/abc274_b" }
abc274-c = { alias = "c", problem = "https://atcoder.jp/contests/abc274/tasks/abc274_c" }
abc274-d = { alias = "d", problem = "https://atcoder.jp/contests/abc274/tasks/abc274_d" }
abc274-e = { alias = "e", problem = "https://atcoder.jp/contests/abc274/tasks/abc274_e" }
abc274-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc274/tasks/abc274_h" }
abc274-f = { alias = "f", problem = "https://atcoder.jp/contests/abc274/tasks/abc274_f" }
abc274-g = { alias = "g", problem = "https://atcoder.jp/contests/abc274/tasks/abc274_g" }

[[bin]]
name = "abc274-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc274-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc274-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc274-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc274-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc274-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc274-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc274-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
