[package]
name = "abc275"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc275-a = { alias = "a", problem = "https://atcoder.jp/contests/abc275/tasks/abc275_a" }
abc275-b = { alias = "b", problem = "https://atcoder.jp/contests/abc275/tasks/abc275_b" }
abc275-c = { alias = "c", problem = "https://atcoder.jp/contests/abc275/tasks/abc275_c" }
abc275-d = { alias = "d", problem = "https://atcoder.jp/contests/abc275/tasks/abc275_d" }
abc275-e = { alias = "e", problem = "https://atcoder.jp/contests/abc275/tasks/abc275_e" }
abc275-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc275/tasks/abc275_h" }
abc275-f = { alias = "f", problem = "https://atcoder.jp/contests/abc275/tasks/abc275_f" }
abc275-g = { alias = "g", problem = "https://atcoder.jp/contests/abc275/tasks/abc275_g" }

[[bin]]
name = "abc275-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc275-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc275-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc275-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc275-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc275-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc275-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc275-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
