[package]
name = "abc276"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc276-a = { alias = "a", problem = "https://atcoder.jp/contests/abc276/tasks/abc276_a" }
abc276-b = { alias = "b", problem = "https://atcoder.jp/contests/abc276/tasks/abc276_b" }
abc276-c = { alias = "c", problem = "https://atcoder.jp/contests/abc276/tasks/abc276_c" }
abc276-d = { alias = "d", problem = "https://atcoder.jp/contests/abc276/tasks/abc276_d" }
abc276-e = { alias = "e", problem = "https://atcoder.jp/contests/abc276/tasks/abc276_e" }
abc276-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc276/tasks/abc276_h" }
abc276-f = { alias = "f", problem = "https://atcoder.jp/contests/abc276/tasks/abc276_f" }
abc276-g = { alias = "g", problem = "https://atcoder.jp/contests/abc276/tasks/abc276_g" }

[[bin]]
name = "abc276-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc276-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc276-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc276-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc276-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc276-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc276-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc276-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
