[package]
name = "abc277"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc277-a = { alias = "a", problem = "https://atcoder.jp/contests/abc277/tasks/abc277_a" }
abc277-b = { alias = "b", problem = "https://atcoder.jp/contests/abc277/tasks/abc277_b" }
abc277-c = { alias = "c", problem = "https://atcoder.jp/contests/abc277/tasks/abc277_c" }
abc277-d = { alias = "d", problem = "https://atcoder.jp/contests/abc277/tasks/abc277_d" }
abc277-e = { alias = "e", problem = "https://atcoder.jp/contests/abc277/tasks/abc277_e" }
abc277-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc277/tasks/abc277_h" }
abc277-f = { alias = "f", problem = "https://atcoder.jp/contests/abc277/tasks/abc277_f" }
abc277-g = { alias = "g", problem = "https://atcoder.jp/contests/abc277/tasks/abc277_g" }

[[bin]]
name = "abc277-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc277-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc277-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc277-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc277-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc277-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc277-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc277-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
