[package]
name = "abc281"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc281-a = { alias = "a", problem = "https://atcoder.jp/contests/abc281/tasks/abc281_a" }
abc281-b = { alias = "b", problem = "https://atcoder.jp/contests/abc281/tasks/abc281_b" }
abc281-c = { alias = "c", problem = "https://atcoder.jp/contests/abc281/tasks/abc281_c" }
abc281-d = { alias = "d", problem = "https://atcoder.jp/contests/abc281/tasks/abc281_d" }
abc281-e = { alias = "e", problem = "https://atcoder.jp/contests/abc281/tasks/abc281_e" }
abc281-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc281/tasks/abc281_h" }
abc281-f = { alias = "f", problem = "https://atcoder.jp/contests/abc281/tasks/abc281_f" }
abc281-g = { alias = "g", problem = "https://atcoder.jp/contests/abc281/tasks/abc281_g" }

[[bin]]
name = "abc281-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc281-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc281-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc281-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc281-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc281-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc281-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc281-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
