[package]
name = "abc282"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc282-a = { alias = "a", problem = "https://atcoder.jp/contests/abc282/tasks/abc282_a" }
abc282-b = { alias = "b", problem = "https://atcoder.jp/contests/abc282/tasks/abc282_b" }
abc282-c = { alias = "c", problem = "https://atcoder.jp/contests/abc282/tasks/abc282_c" }
abc282-d = { alias = "d", problem = "https://atcoder.jp/contests/abc282/tasks/abc282_d" }
abc282-e = { alias = "e", problem = "https://atcoder.jp/contests/abc282/tasks/abc282_e" }
abc282-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc282/tasks/abc282_h" }
abc282-f = { alias = "f", problem = "https://atcoder.jp/contests/abc282/tasks/abc282_f" }
abc282-g = { alias = "g", problem = "https://atcoder.jp/contests/abc282/tasks/abc282_g" }

[[bin]]
name = "abc282-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc282-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc282-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc282-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc282-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc282-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc282-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc282-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
