[package]
name = "abc283"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc283-a = { alias = "a", problem = "https://atcoder.jp/contests/abc283/tasks/abc283_a" }
abc283-b = { alias = "b", problem = "https://atcoder.jp/contests/abc283/tasks/abc283_b" }
abc283-c = { alias = "c", problem = "https://atcoder.jp/contests/abc283/tasks/abc283_c" }
abc283-d = { alias = "d", problem = "https://atcoder.jp/contests/abc283/tasks/abc283_d" }
abc283-e = { alias = "e", problem = "https://atcoder.jp/contests/abc283/tasks/abc283_e" }
abc283-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc283/tasks/abc283_h" }
abc283-f = { alias = "f", problem = "https://atcoder.jp/contests/abc283/tasks/abc283_f" }
abc283-g = { alias = "g", problem = "https://atcoder.jp/contests/abc283/tasks/abc283_g" }

[[bin]]
name = "abc283-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc283-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc283-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc283-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc283-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc283-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc283-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc283-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
