[package]
name = "abc284"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc284-a = { alias = "a", problem = "https://atcoder.jp/contests/abc284/tasks/abc284_a" }
abc284-b = { alias = "b", problem = "https://atcoder.jp/contests/abc284/tasks/abc284_b" }
abc284-c = { alias = "c", problem = "https://atcoder.jp/contests/abc284/tasks/abc284_c" }
abc284-d = { alias = "d", problem = "https://atcoder.jp/contests/abc284/tasks/abc284_d" }
abc284-e = { alias = "e", problem = "https://atcoder.jp/contests/abc284/tasks/abc284_e" }
abc284-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc284/tasks/abc284_h" }
abc284-f = { alias = "f", problem = "https://atcoder.jp/contests/abc284/tasks/abc284_f" }
abc284-g = { alias = "g", problem = "https://atcoder.jp/contests/abc284/tasks/abc284_g" }

[[bin]]
name = "abc284-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc284-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc284-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc284-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc284-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc284-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc284-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc284-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
