[package]
name = "abc287"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc287-a = { alias = "a", problem = "https://atcoder.jp/contests/abc287/tasks/abc287_a" }
abc287-b = { alias = "b", problem = "https://atcoder.jp/contests/abc287/tasks/abc287_b" }
abc287-c = { alias = "c", problem = "https://atcoder.jp/contests/abc287/tasks/abc287_c" }
abc287-d = { alias = "d", problem = "https://atcoder.jp/contests/abc287/tasks/abc287_d" }
abc287-e = { alias = "e", problem = "https://atcoder.jp/contests/abc287/tasks/abc287_e" }
abc287-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc287/tasks/abc287_h" }
abc287-f = { alias = "f", problem = "https://atcoder.jp/contests/abc287/tasks/abc287_f" }
abc287-g = { alias = "g", problem = "https://atcoder.jp/contests/abc287/tasks/abc287_g" }

[[bin]]
name = "abc287-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc287-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc287-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc287-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc287-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc287-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc287-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc287-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
