[package]
name = "abc288"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc288-a = { alias = "a", problem = "https://atcoder.jp/contests/abc288/tasks/abc288_a" }
abc288-b = { alias = "b", problem = "https://atcoder.jp/contests/abc288/tasks/abc288_b" }
abc288-c = { alias = "c", problem = "https://atcoder.jp/contests/abc288/tasks/abc288_c" }
abc288-d = { alias = "d", problem = "https://atcoder.jp/contests/abc288/tasks/abc288_d" }
abc288-e = { alias = "e", problem = "https://atcoder.jp/contests/abc288/tasks/abc288_e" }
abc288-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc288/tasks/abc288_h" }
abc288-f = { alias = "f", problem = "https://atcoder.jp/contests/abc288/tasks/abc288_f" }
abc288-g = { alias = "g", problem = "https://atcoder.jp/contests/abc288/tasks/abc288_g" }

[[bin]]
name = "abc288-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc288-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc288-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc288-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc288-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc288-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc288-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc288-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
